--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -15,8 +15,8 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:layout_height="?android:attr/actionBarSize"
+            android:background="@color/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
@@ -27,10 +27,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <FrameLayout
-            android:id="@+id/contentFrame"
+        <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:id="@+id/notes_recycler_view"
+            android:layout_margin="8dp"
+            tools:listitem="@layout/note_item" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_add_task"
@@ -39,7 +41,7 @@
             android:layout_margin="@dimen/fab_margin"
             app:srcCompat="@drawable/ic_edit"
             app:fabSize="normal"
-            app:layout_anchor="@id/contentFrame"
+            app:layout_anchor="@id/notes_recycler_view"
             app:layout_anchorGravity="bottom|right|end" />
     </android.support.design.widget.CoordinatorLayout>
 
