--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="?listPreferredItemPaddingLeft"
-    android:paddingRight="?listPreferredItemPaddingRight"
+    android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
+    android:paddingRight="?android:attr/listPreferredItemPaddingRight"
     android:layout_marginBottom="8dp"
     android:layout_marginTop="8dp"
     android:paddingBottom="8dp"
     android:orientation="vertical"
-    android:paddingStart="?listPreferredItemPaddingLeft"
-    android:paddingEnd="?listPreferredItemPaddingRight">
+    android:paddingStart="?android:attr/listPreferredItemPaddingLeft"
+    android:paddingEnd="?android:attr/listPreferredItemPaddingRight">
 
     <TextView
         android:id="@+id/text_note_title"
